[package]
name = "spear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.137", features = ["derive"]}
toml = "0.5.9"
clap = {version = "3.1.17", features = ["derive"]}
