[package]
name = "spear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.137", features = ["derive"]}
toml = "0.5.9"
clap = {version = "3.1.17", features = ["derive"]}
better-panic = "0.3.0"
reqwest = "0.11.10"
flate2 = "1.0"
bzip2 = "0.4"
xz2 = "0.1.6"
spinners = "4.0.0"
tar = "0.4.38"
glob = "0.3.0"
error-chain = "0.12.4"
